WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2007-05-09


Version 0.2.5 (under dev!):
   * fixed bug with $nick/$channel/$server variables in commands
   * forget current nick when user manually disconnects from server
   * fixed nick display in input window
   * fixed bug with erroneous nickname when connecting to server (bug #19812)
   * fixed display bugs in IRC error messages
   * added protocol priority for gnutls (patch #5915)
   * added channel admin mode '!' for some IRC servers
   * fixed bug with iso2022jp locale (bug #18719)
   * fixed string format bug when displaying string thru plugin script API
   * added /reconnect command (task #5448)
   * added "-all" option for /connect and /disconnect commands (task #6232)
   * improved nick completion: completion with last speakers first and self
     nick at the end; added option look_nick_completion_smart, enabled by
     default (task #5896)
   * fixed nick completion in command arguments (bug #19590)
   * fixed possible crash with nick completion when a nick leaves channel
     (bug #19589)
   * added color for input text not found in buffer history
   * fixed USER message when connecting to IRC server (patch #5835)

Version 0.2.4 (2007-03-29):
   * fixed color bug with IRC messages displayed by plugins (bug #19442)
   * fixed topic charset, now using channel charset if defined (bug #19386)
   * renamed log file for DCC chat (now <server>.dcc.<nick>.weechatlog)
   * fixed crash when closing a pv if a DCC chat is open on same nick
     (bug #19147)
   * fixed bug with channel topic after reconnection (not erased) (bug #19384)
   * added current buffer in hotlist when scrolling up in buffer (task #6664)
   * fixed bug with explode_string / free_exploded_string when max_items > 0
   * added new key (ctrl-R) for interactive and incremental search in buffer
     history (task #6628)